# market-data-feed-handler

./: CMakeLists.txt  README.md
include/: MarketTick.hpp  RingBuffer.hpp
include/client/: Client.hpp  RollingVWAP.hpp  VWAPCalculator.hpp  VWAPstate.hpp
include/server/: Server.hpp  SyntheticFeed.hpp
src/: client.cpp  main.cpp  server.cpp
src/client/: Client.cpp  RollingVWAP.cpp  VWAPCalculator.cpp
src/server/: Server.cpp  SyntheticFeed.cpp
tests/: CMakeLists.txt
tests/common/: test_client_server.cpp  test_market_tick.cpp  test_ringbuffer.cpp  test_stress.cpp  test_vwap.cpp
tests/main/: test_client_server_main.cpp  test_rolling_vwap.cpp
